# teams-score-counter

./: .gitignore  Cargo.toml  index.html
src/: main.rs
