[package]
name = "teams-score-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = "0.9.0"
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"]}
